@@ -1,1 +1,1 @@
-SUBDIRS = gtk gtk-2.0
+SUBDIRS = gtk-2.0
