@@ -1,5 +1,0 @@
-themedir = $(datadir)/themes/Redmond/gtk
-theme_DATA = gtkrc
-
-EXTRA_DIST = $(theme_DATA)
-
