@@ -1,55 +1,0 @@
-style "standard-default"
-{
-  fg[ACTIVE]        = { 0.0, 0.0, 0.0 }
-  fg[INSENSITIVE]   = { 0.5, 0.5, 0.5 }
-  fg[NORMAL]        = { 0.0, 0.0, 0.0 }
-  fg[PRELIGHT]      = { 0.0, 0.0, 0.0 }
-  fg[SELECTED]      = { 1.0, 1.0, 1.0 }
-
-  bg[ACTIVE]        = { 0.83, 0.81, 0.78 }
-  bg[INSENSITIVE]   = { 0.83, 0.81, 0.78 }
-  bg[NORMAL]        = { 0.83, 0.81, 0.78 }
-  bg[PRELIGHT]      = { 0.83, 0.81, 0.78 }
-  bg[SELECTED]      = { 0.04, 0.14, 0.41 }
-
-  base[ACTIVE]      = { 0.04, 0.14, 0.41 }
-  base[INSENSITIVE] = { 0.83, 0.81, 0.78 }
-  base[NORMAL]      = { 1.0, 1.0, 1.0 }
-  base[PRELIGHT]    = { 0.04, 0.14, 0.41 }
-  base[SELECTED]    = { 0.04, 0.14, 0.41 }
-
-  text[ACTIVE]      = { 1.0, 1.0, 1.0 }
-  text[INSENSITIVE] = { 0.5, 0.5, 0.5 }
-  text[NORMAL]      = { 0.0, 0.0, 0.0 }
-  text[PRELIGHT]    = { 1.0, 1.0, 1.0 }
-  text[SELECTED]    = { 1.0, 1.0, 1.0 }
-
-  engine "redmond95" {}
-}
-
-class "GtkWidget" style "standard-default"
-
-style "standard-menu"
-{
-  bg[PRELIGHT] = { 0.04, 0.14, 0.41 }
-  fg[PRELIGHT] = { 1.0, 1.0, 1.0 }
-}
-
-widget_class "*MenuItem*" style "standard-menu"
-
-style "standard-menubar-item"
-{
-  bg[PRELIGHT] = { 0.83, 0.81, 0.78 }
-  fg[PRELIGHT] = { 0.0, 0.0, 0.0 }
-}
-
-class "*MenuBar.*MenuItem*" style "standard-menubar-item"
-widget_class "*MenuBar.*MenuItem*" style "standard-menubar-item"
-
-style "standard-list"
-{
-   bg[NORMAL] = { 0.9, 0.9, 0.9 }
-   bg[PRELIGHT] = { 0.0, 0.0, 0.0 }
-}
-
-class "GtkList" style "standard-list"
